# router/common.go
@@ -8,4 +8,5 @@ import (
 func SetupCommonRoutes(router fiber.Router) {
     common := router.Group("/common")
     common.Get("/country/list", controller.GetCountries)
+    common.Get("/patient", controller.GetPatientData)
 }
